doc: Fix inconsistencies in paper.md and paper.bib

--- a/paper.bib
+++ b/paper.bib
@@ -78,7 +78,7 @@
   title     = {{SMAC3}: A Versatile Bayesian Optimization Package for {H}yperparameter {O}ptimization},
   author    = {M. Lindauer and K. Eggensperger and M. Feurer and A. Biedenkapp and D. Deng and C. Benjamins and T. Ruhkopf and R. Sass and F. Hutter},
   year      = {2022},
-  journal   = jmlr,
+  journal   = {Journal of Machine Learning Research},
   volume    = {23},
   number    = {54},
   pages     = {1-9}
