--- a/paper.bib
+++ b/paper.bib
@@ -14,9 +14,11 @@
 }
 
 @proceedings{nips15,
-  title     = {Proc. of {N}eur{IPS}'15},
-  booktitle = {Proc. of {N}eur{IPS}'15},
-  year      = {2015}
+  title        = {Proceedings of the 29th International Conference on Advances in Neural Information Processing Systems ({N}eur{IPS}'15)},
+  year         = 2015,
+  booktitle    = {Proceedings of the 29th International Conference on Advances in Neural Information Processing Systems ({N}eur{IPS}'15)},
+  publisher    = {Curran Associates},
+  editor       = {C. Cortes and N. Lawrence and D. Lee and M. Sugiyama and R. Garnett},
 }
 
 @article{feurer-jmlr22a,
@@ -27,7 +29,6 @@
   volume    = 23,
   number    = 261,
   pages     = {1--61},
-  editor    = {M. Schoenauer},
 }
 
 @article{gijsbers-arxiv23a,
@@ -40,11 +41,11 @@
 @article{zimmer-tpami21a,
   title     = {{Auto-Pytorch}: Multi-Fidelity MetaLearning for Efficient and Robust {AutoDL}},
   author    = {L. Zimmer and M. Lindauer and F. Hutter},
-  year      = 2021,
+  year      = {2021},
   journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  volume    = 43,
+  volume    = {43},
   pages     = {3079--3090},
-  issue     = 9,
+  issue     = {9},
 }
 
 @book{hutter-book19a,
@@ -61,7 +62,7 @@
   title     = {GAMA: A General Automated Machine Learning Assistant},
   booktitle = {Machine Learning and Knowledge Discovery in Databases. Applied Data Science and Demo Track},
   year      = {2021},
-  publisher = {Springer International Publishing},
+  publisher = {Springer},
   pages     = {560--564},
 }
 
@@ -120,8 +121,8 @@
   title     = {Auto-WEKA: combined selection and hyperparameter optimization of classification algorithms},
   author    = {C. Thornton and F. Hutter and H. Hoos and K. Leyton-Brown},
   year      = {2013},
-  booktitle = {Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
-  pages     = {847 -– 855},
+  booktitle = {Proceedings of the 19th {ACM} {SIGKDD} international conference on Knowledge discovery {\&} Data Mining ({KDD}'13)},
+  pages     = {847--855},
 }
 
 @inproceedings{olson-gecco16a,
@@ -132,20 +133,16 @@
   pages     = {485--492},
 }
 
-@misc{autoprognosis,
-  doi       = {10.48550/ARXIV.2210.12090},
-  url       = {https://arxiv.org/abs/2210.12090},
-  author    = {Imrie, Fergus and Cebere, Bogdan and McKinney, Eoin F. and van der Schaar, Mihaela},
-  keywords  = {Machine Learning (cs.LG), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+@article{autoprognosis,
+  author    = {F. Imrie and B. Cebere and E. McKinney and M. van der Schaar},
   title     = {AutoPrognosis 2.0: Democratizing Diagnostic and Prognostic Modeling in Healthcare with Automated Machine Learning},
-  publisher = {arXiv},
   year      = {2022},
-  copyright = {Creative Commons Attribution 4.0 International}
+  journal   = {arXiv:2210.12090 {[cs.LG]}}
 }
 
 @article{wang2021flaml,
-  title     = {Flaml: A fast and lightweight automl library},
-  author    = {Wang, Chi and Wu, Qingyun and Weimer, Markus and Zhu, Erkang},
+  title     = {{FLAML}: A fast and lightweight automl library},
+  author    = {C. Wang and Q. Wu and M. Weimer and E. Zhu},
   journal   = {Proceedings of Machine Learning and Systems},
   volume    = {3},
   pages     = {434--447},
